--- a/main.css
+++ b/main.css
@@ -1,3 +1,34 @@
+/* roboto-regular - latin */
+@font-face {
+  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  src: url("../fonts/roboto-v30-latin-regular.woff2") format("woff2"),
+    /* Chrome 36+, Opera 23+, Firefox 39+ */
+      url("../fonts/roboto-v30-latin-regular.woff") format("woff"); /* Chrome 5+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+/* roboto-500 - latin */
+@font-face {
+  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 500;
+  src: url("../fonts/roboto-v30-latin-500.woff2") format("woff2"),
+    /* Chrome 36+, Opera 23+, Firefox 39+ */
+      url("../fonts/roboto-v30-latin-500.woff") format("woff"); /* Chrome 5+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+/* roboto-700 - latin */
+@font-face {
+  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 700;
+  src: url("../fonts/roboto-v30-latin-700.woff2") format("woff2"),
+    /* Chrome 36+, Opera 23+, Firefox 39+ */
+      url("../fonts/roboto-v30-latin-700.woff") format("woff"); /* Chrome 5+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -17,12 +48,181 @@ button,
 input {
   outline: none;
   border: none;
+  cursor: pointer;
+  background-color: transparent;
 }
 
 body {
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-family: "Roboto", "Arial", sans-serif;
+  font-style: normal;
+  background-color: rgb(255, 196, 0);
+}
+
+.container {
+  width: 1300px;
+  padding: 15px 15px;
+}
+#selectGross,
+#selectAz {
+  padding: 10px 52px;
+  background: #ffffff;
+  border: 2px solid #000000;
+  border-radius: 15px;
+  cursor: pointer;
+}
+
+#SearchInput {
+  padding: 10px 25px;
+  background: #ffffff;
+  border: 2px solid #000000;
+  border-radius: 15px;
+}
+.search__wrapper {
+  margin-top: 70px;
+  margin-left: 100px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.searchBtn {
+  background: #ffffff;
+  border: 2px solid #000000;
+  border-radius: 15px;
+  padding: 16px 64px;
+}
+
+.logo-img {
+  margin: auto;
+  display: block;
+  margin-top: 30px;
+  margin-bottom: 60px;
+  margin-left: 30px;
+}
+.content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.content-info-wrapper {
+  display: flex;
+  margin-top: 30px;
+  margin-bottom: 25px;
+  margin-left: 30px;
+}
+
+.content {
+  margin-top: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 1100px;
+  flex-wrap: wrap;
+}
+
+.useful {
+  background: #ffffff;
+  border: 2px solid #000000;
+  border-radius: 20px;
+  width: 300px;
+}
+
+.list {
+  background: #ffffff;
+  border: 2px solid #000000;
+  border-radius: 20px;
+  margin-top: 100px;
+  width: 300px;
+  margin-left: 30px;
+}
+
+.line {
+  width: 250px;
+}
+.left-content {
+  background: #ffffff;
+  border: 2px solid #000000;
+  border-radius: 20px;
+  margin-top: 100px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  width: 350px;
+}
+.content-img {
+  width: 157px;
+  height: 157px;
+}
+
+.pokemon-name {
+  font-size: 24px;
+  line-height: 28px;
+  color: #000000;
+}
+.pokemon-info {
   font-weight: 500;
-  font-style: unset;
-  letter-spacing: 2px;
+  font-size: 20px;
+  line-height: 23px;
+  color: #000000;
+}
+
+.kg {
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 28px;
+  color: #000000;
+}
+
+.age {
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 28px;
+  color: #000000;
+}
+
+.name-wrapper {
+  margin-right: 100px;
+}
+
+.ages-wrapper {
+  margin-bottom: 35px;
+  margin-left: 30px;
+}
+
+/* modal */
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: -100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  width: 70%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: top 1s ease-in-out;
+}
+
+.active {
+  left: 0;
+}
+
+.left {
+  background: #ffeda9;
+  border: 2px solid #000000;
+  position: absolute;
+  left: 830px;
+  height: 100%;
+  padding: 20px;
+}
+
+.modal-open {
+  position: absolute;
+  top: 30px;
+  left: 1100px;
+}
+
+.content-item {
+  margin-left: 30px;
 }
