--- a/main.css
+++ b/main.css
@@ -61,6 +61,7 @@ body {
 .container {
   width: 1300px;
   padding: 15px 15px;
+  position: relative;
 }
 #selectGross,
 #selectAz {
@@ -82,6 +83,7 @@ body {
   margin-left: 100px;
   display: flex;
   justify-content: space-between;
+  width: 1000px;
 }
 
 .searchBtn {
@@ -225,4 +227,21 @@ body {
 
 .content-item {
   margin-left: 30px;
+}
+
+@media screen and (max-width: 768px) {
+  .container {
+    overflow-x: hidden;
+  }
+}
+
+.cartCount {
+  position: absolute;
+  left: 1120px;
+  top: 47px;
+}
+
+.heartbtn {
+  width: 50px;
+  height: 50px;
 }
